force-app/main/default/objects/Lead/fields/Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funding_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Funding Opportunity the lead is applying for.</description>
    <label>Funding Opportunity</label>
    <referenceTo>Funding_Opportunity__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>