force-app/main/default/objects/Lead/recordTypes/Normal_Lead.recordType-meta.xml
<RecordType>
    <fullName>Normal_Lead</fullName>
    <active>false</active>
    <businessProcess>Normal Lead</businessProcess>
    <description>Traditional account lead</description>
    <label>Normal Lead</label>
</RecordType>