force-app/main/default/objects/Lead/recordTypes/Small_Business_Program.recordType-meta.xml
<RecordType>
    <fullName>Small_Business_Program</fullName>
    <active>true</active>
    <businessProcess>Small Business Program</businessProcess>
    <description>Lead type for businesses interested in the Small Business Program</description>
    <label>Small Business Program</label>
</RecordType>