force-app/main/default/objects/Lead/listViews/Northeast_Application_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Northeast_Application_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Northeast Application Queue</label>
    <queue>Northeast_Application_Queue</queue>
    <sharedTo>
        <roleAndSubordinatesInternal>Connecticut_Sales_Manager</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Delaware_Sales_Manager</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Maine_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Maryland_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Massachusetts_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_New_Hampshire_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_New_Jersey_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_New_York_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Pennsylvania_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Rhode_Island_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Vermont_Sales</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>