force-app/main/default/objects/Lead/listViews/Southern_Application_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Southern_Application_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Southern Application Queue</label>
    <queue>Southern_Application_Queue</queue>
    <sharedTo>
        <roleAndSubordinatesInternal>Director_of_Alabama_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Arkansas_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_District_of_Columbia_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Florida_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Georgia_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Kentucky_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Louisiana_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Mississippi_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Missouri_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_North_Carolina_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Puerto_Rico_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_South_Carolina_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Tennessee_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Virgin_Islands_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_Virginia_Sales</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Director_of_West_Virginia_Sales</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>