force-app/main/default/objects/Lead/listViews/Western_Application_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Western_Application_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Western Application Queue</label>
    <queue>Western_Application_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>